name: example
version: 0.1.0
license: Apache-2.0
author: Chris Johnston <crappygraphix@gmail.com>
maintainer: Chris Johnston <crappygraphix@gmail.com>
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: Example.Layout
  other-modules: Example.Nav
               , Example.Nav.Routes
               , Example.Page.Deeper
               , Example.Page.First
               , Example.Page.Second
               , Example.Page.Third
               , Example.Session
  build-depends:
      base
    , microlens-platform
    , reflex
    , reflex-dom
    , reflex-dom-sparouter
    , ghcjs-base
    , text
  ghc-options: -Wall -j1 -O0 -v0
  default-language: Haskell2010
  default-extensions: OverloadedStrings

executable example-exe
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -j1 -O0 -v0
  cpp-options: -DGHCJS_BROWSER
  build-depends:
      base
    , example
  default-language: Haskell2010
  default-extensions: OverloadedStrings
