name: reflex-dom-sparouter
version: 0.1.0
cabal-version: >=1.10
build-type: Simple
license: Apache-2.0
copyright: 2019 Chris Johnston <crappygraphix@gmail.com>
maintainer: Chris Johnston <crappygraphix@gmail.com>
author: Chris Johnston <crappygraphix@gmail.com>
extra-source-files:

source-repository head
  type:     git
  location: https://github.com/crappygraphix/reflex-dom-sparouter

library
  hs-source-dirs: ./.
  exposed-modules:
      Reflex.Dom.SpaRouter
    , Reflex.Dom.SpaRouter.SpaState
  other-modules:

  build-depends:
      base
    , ghcjs-dom
    , jsaddle
    , microlens-platform
    , reflex
    , reflex-dom
    , text
    , uri
  default-language:    Haskell2010

  if impl(ghcjs)
    build-depends: ghcjs-base
